--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,23 @@
 spring.application.name=home-automation-system
 server.port=8001
 
-spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/home_automation?useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root@123
+#spring.datasource.url=jdbc:mysql://localhost:3306/home_automation?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/home_automation
+#spring.datasource.username=root
+#spring.datasource.password=root@123
 
-spring.datasource.url=jdbc:mysql://localhost:3306/home_automation
+spring.datasource.url=jdbc:mysql://database-1.cw9j2fomzlqo.us-west-1.rds.amazonaws.com:3306/home_automation?useSSL=false&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=YsQ2Zrq2YnfxB0HMDWNa
+
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-#spring.datasource.url=jdbc:mysql://localhost/home_automation
-#spring.datasource.username=root
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #jpa vendor adapter configuration
-spring.jpa.database.platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 #jwt token
