Added api for engery record

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.url=jdbc:mysql://database-1.cw9j2fomzlqo.us-west-1.rds.amazonaws.com:3306/home_automation?useSSL=false&serverTimezone=UTC
 spring.datasource.username=admin
-spring.datasource.password=YsQ2Zrq2YnfxB0HMDWNa
+spring.datasource.password=##
 
 
 spring.jpa.hibernate.ddl-auto=none
