--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
 			<artifactId>netty-nio-client</artifactId>
 			<version>2.25.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.paho</groupId>
+			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+			<version>1.2.5</version>
+		</dependency>	
 	</dependencies>
 
 	<build>
